# dsktools

./: .gitignore  CMakeLists.txt  Makefile  README.md  dsk.c  dsk.h  dsk_add.c  dsk_del.c  dsk_extract  dsk_extract.c  dsk_format.c  dsk_new.c  dsk_rename.c  links.sh  main.c
.github/: copilot-instructions.md
